--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "dependencies": {
     "@react-three/drei": "^4.3.3",
     "@react-three/fiber": "^6.0.19",
+    "@react-three/gltfjsx": "^4.1.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-spring": "^9.1.2",
     "react-use-gesture": "^9.1.3",
     "three": "^0.128.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "zustand": "^3.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
